--- a/modules/ComponentsLibrary/GanttChart/styles.less
+++ b/modules/ComponentsLibrary/GanttChart/styles.less
@@ -1,11 +1,10 @@
 @import '../../../styles/index.less';
 
-@GAP: 1;
-
 .GanttChart {
   .body1();
   display: flex;
   align-items: flex-start;
+  position: relative;
   &.loading {
     filter: grayscale(1);
     pointer-events: none;
@@ -16,6 +15,12 @@
     border-right: 1px solid @grey-200;
     padding-top: 58px;
     background-color: @grey-100;
+    box-sizing: border-box;
+    overflow: hidden;
+    transition: width 250ms ease;
+    &.collapsed {
+      width: 0;
+    }
   }
   &AsideRow {
     border-bottom: 1px solid @grey-200;
@@ -45,6 +50,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     padding-bottom: .spacing(2) [];
+    width: calc(100vw - 250px);
   }
   &GanttRow {
     display: flex;
@@ -70,7 +76,7 @@
   }
   &Event {
     background-color: @grey-200;
-    margin-left: -@GAP;
+    margin-left: -1px;
     padding: .spacing(0.5) [];
     height: 20px;
     display: flex;
@@ -78,5 +84,11 @@
   }
   &Hour {
     opacity: 0.5;
+  }
+  &Toggle {
+    position: absolute !important;
+    top: 13px;
+    left: 4px;
+    background-color: @common-white !important;
   }
 }
